[gd_scene load_steps=11 format=2]

[ext_resource path="res://avatars/gardener/Gardener.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/blumenwiese/Ground.tres" type="Material" id=2]
[ext_resource path="res://scenes/blumenwiese/Seed.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/blumenwiese/Main.gd" type="Script" id=4]
[ext_resource path="res://scenes/blumenwiese/Flower1.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/blumenwiese/Leafs1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/blumenwiese/Blossom.tscn" type="PackedScene" id=7]

[sub_resource type="PhysicsMaterial" id=3]
resource_name = "Rasen"

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[node name="Main" type="Node"]
script = ExtResource( 4 )
seed_scene = ExtResource( 3 )
flower_scene = ExtResource( 5 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_mask = 0
physics_material_override = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
material_override = ExtResource( 2 )
mesh = SubResource( 2 )
skeleton = NodePath("")

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.866025, -0.232328, 0.442746, 0, 0.885491, 0.464657, -0.5, -0.402405, 0.766858, -8, 5, -9.383 )
shadow_enabled = true

[node name="GardenerTemplate" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999998, 0.0209999, 1.43313, -2.25692 )
collision_layer = 2
collision_mask = 3

[node name="Testpflanze" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.55254, 0, 0.532307 )

[node name="Leafs1" parent="Testpflanze" instance=ExtResource( 6 )]

[node name="Bl√ºte" parent="Testpflanze" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Testflower" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0 )

[node name="Flower" parent="Testflower" instance=ExtResource( 5 )]

[node name="SpawnPositions" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93884, 12.0162 )

[node name="0" type="Spatial" parent="SpawnPositions"]
transform = Transform( -0.990631, 0, 0.136563, 0, 1, 0, -0.136563, 0, -0.990631, 0, 0, 6.66091 )

[node name="Position3D" type="Position3D" parent="SpawnPositions/0"]

[node name="1" type="Spatial" parent="SpawnPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.698, 0, -20 )

[node name="Position3D" type="Position3D" parent="SpawnPositions/1"]

[node name="2" type="Spatial" parent="SpawnPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -21.5265, 0, -6.13243 )

[node name="Position3D" type="Position3D" parent="SpawnPositions/2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.46196, 0, 0 )

[node name="3" type="Spatial" parent="SpawnPositions"]
transform = Transform( -0.995805, 0, -0.0915017, 0, 1, 0, 0.0915017, 0, -0.995805, 18.3298, 0, -16.3968 )

[node name="Position3D" type="Position3D" parent="SpawnPositions/3"]

[node name="4" type="Spatial" parent="SpawnPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.3011, 0, -19.4543 )

[node name="Position3D" type="Position3D" parent="SpawnPositions/4"]

[node name="5" type="Spatial" parent="SpawnPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.5897, 0, -2.74737 )

[node name="Position3D" type="Position3D" parent="SpawnPositions/5"]

[node name="6" type="Spatial" parent="SpawnPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.07819, 0, -22.7301 )

[node name="Position3D" type="Position3D" parent="SpawnPositions/6"]

[node name="7" type="Spatial" parent="SpawnPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4678, 0, -4.27611 )

[node name="Position3D" type="Position3D" parent="SpawnPositions/7"]

[connection signal="spawned_seed" from="GardenerTemplate" to="." method="_on_Gardener_spawned_seed"]
